# rusvel

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  PROJECT_CONTEXT.md  README.md  docker-compose.yml  justfile  lefthook.yml  pyproject.toml
.claude/: launch.json
.claude/agents/: arch-reviewer.md  dept-auditor.md  researcher.md
.claude/hooks/: block-npm.sh  line-count-check.sh  pre-commit-quality.sh  pre-edit-format.sh  session-save.sh  test-on-edit.sh
.claude/rules/: api.md  dept-crates.md  docs.md  engines.md  frontend.md
.github/workflows/: ci.yml  claude-review.yml  docs.yml  release.yml
crates/code-engine/: Cargo.toml
crates/code-engine/src/: error.rs  graph.rs  lib.rs  metrics.rs  parser.rs  search.rs
crates/code-engine/tests/: integration.rs
crates/content-engine/: Cargo.toml
crates/content-engine/src/: analytics.rs  calendar.rs  code_bridge.rs  lib.rs  platform.rs  tests.rs  writer.rs
crates/content-engine/src/adapters/: devto.rs  linkedin.rs  mod.rs  twitter.rs
crates/content-engine/tests/: integration.rs
crates/dept-code/: Cargo.toml
crates/dept-code/src/: lib.rs  manifest.rs
crates/dept-content/: Cargo.toml
crates/dept-content/src/: events.rs  jobs.rs  lib.rs  manifest.rs  tools.rs
crates/dept-distro/: Cargo.toml
crates/dept-distro/src/: lib.rs  manifest.rs  tools.rs
crates/dept-finance/: Cargo.toml
crates/dept-finance/src/: lib.rs  manifest.rs
crates/dept-flow/: Cargo.toml
crates/dept-flow/src/: lib.rs  manifest.rs  tools.rs
crates/dept-forge/: Cargo.toml
crates/dept-forge/src/: lib.rs  manifest.rs
crates/dept-growth/: Cargo.toml
crates/dept-growth/src/: lib.rs  manifest.rs  tools.rs
crates/dept-gtm/: Cargo.toml
crates/dept-gtm/src/: lib.rs  manifest.rs  tools.rs
crates/dept-harvest/: Cargo.toml
crates/dept-harvest/src/: lib.rs  manifest.rs
crates/dept-infra/: Cargo.toml
crates/dept-infra/src/: lib.rs  manifest.rs  tools.rs
crates/dept-legal/: Cargo.toml
crates/dept-legal/src/: lib.rs  manifest.rs  tools.rs
crates/dept-messaging/: Cargo.toml
crates/dept-messaging/src/: lib.rs  manifest.rs
crates/dept-product/: Cargo.toml
crates/dept-product/src/: lib.rs  manifest.rs
crates/dept-support/: Cargo.toml
crates/dept-support/src/: lib.rs  manifest.rs  tools.rs
crates/distro-engine/: Cargo.toml
crates/finance-engine/: Cargo.toml
crates/flow-engine/: Cargo.toml
crates/flow-engine/src/: executor.rs  expression.rs  expressions.rs  lib.rs  templates.rs
crates/flow-engine/src/nodes/: agent.rs  browser.rs  code.rs  condition.rs  mod.rs  parallel.rs
crates/flow-engine/tests/: durable_flow.rs
crates/forge-engine/: Cargo.toml
crates/forge-engine/src/: artifacts.rs  events.rs  lib.rs  mission.rs  personas.rs  pipeline.rs  safety.rs
crates/forge-engine/tests/: pipeline_orchestration.rs
crates/growth-engine/: Cargo.toml
crates/gtm-engine/: Cargo.toml
crates/gtm-engine/src/: crm.rs  email.rs  invoice.rs  lib.rs  outreach.rs
crates/gtm-engine/tests/: integration.rs
crates/harvest-engine/: Cargo.toml
crates/harvest-engine/src/: cdp_source.rs  events.rs  lib.rs  normalize.rs  outcomes.rs  pipeline.rs  proposal.rs  scan_execute.rs  scorer.rs  source.rs
crates/harvest-engine/tests/: integration.rs
crates/infra-engine/: Cargo.toml
crates/infra-engine/src/: deploy.rs  incident.rs  lib.rs  monitor.rs
crates/legal-engine/: Cargo.toml
crates/product-engine/: Cargo.toml
crates/rusvel-agent/: Cargo.toml
crates/rusvel-agent/src/: context_pack.rs  lib.rs  persona.rs  verification.rs  workflow.rs
crates/rusvel-agent/tests/: workflow_tests.rs
crates/rusvel-api/: Cargo.toml
crates/rusvel-api/src/: agents.rs  analytics.rs  approvals.rs  artifacts.rs  auth.rs  browser.rs  build_cmd.rs  capability.rs  chat.rs  config.rs  connectors.rs  cron.rs  dashboard.rs  db_routes.rs  department.rs  engine_routes.rs  flow_routes.rs  help.rs  hook_dispatch.rs  hooks.rs  jobs.rs  kits.rs  knowledge.rs  lib.rs  mcp_servers.rs  pipeline_runner.rs  playbooks.rs  request_id.rs  routes.rs  rules.rs  skills.rs  sse_helpers.rs  system.rs  terminal.rs  visual_report.rs  webhooks.rs  workflows.rs
crates/rusvel-api/tests/: agents_smoke.rs  analytics_smoke.rs  api_health_smoke.rs  approvals_smoke.rs  auth_bearer.rs  brief_and_flow_templates_smoke.rs  chat_conversations.rs  code_to_content.rs  config_smoke.rs  cost_analytics_smoke.rs  cron_api.rs  cron_api_smoke.rs  db_browser_smoke.rs  departments_smoke.rs  flows_smoke.rs  forge_pipeline_api.rs  gtm_outreach_execute.rs  harvest_outcomes_smoke.rs  harvest_to_proposal.rs  hooks_crud.rs  jobs_list.rs  knowledge_smoke.rs  mcp_servers_crud.rs  outreach_e2e.rs  outreach_s039_approval_api.rs  rules_crud.rs  sessions_smoke.rs  skills_crud.rs  terminal_smoke.rs  webhook_cron_e2e.rs  webhooks_e2e.rs  workflows_crud.rs
crates/rusvel-api/tests/common/: mod.rs  outreach.rs
crates/rusvel-app/: Cargo.toml
crates/rusvel-app/benches/: boot.rs
crates/rusvel-app/src/: boot.rs  llm_bootstrap.rs  main.rs
crates/rusvel-app/tests/: department_contract.rs
crates/rusvel-auth/: Cargo.toml
crates/rusvel-auth/src/: lib.rs
crates/rusvel-builtin-tools/: Cargo.toml
crates/rusvel-builtin-tools/src/: artifacts.rs  browser.rs  delegate.rs  file_ops.rs  flow.rs  git.rs  lib.rs  memory.rs  shell.rs  terminal_tools.rs  tool_search.rs
crates/rusvel-cdp/: Cargo.toml
crates/rusvel-cdp/src/: lib.rs  network.rs  observe.rs  pool.rs  transport.rs
crates/rusvel-channel/: Cargo.toml
crates/rusvel-channel/src/: lib.rs  telegram.rs
crates/rusvel-cli/: Cargo.toml
crates/rusvel-cli/src/: departments.rs  lib.rs  shell.rs
crates/rusvel-cli/tests/: cli_args.rs
docs/: README.md  claude-code-features.md  claude-code-tooling.md  enhance-by-community.md  manual-testing-guide.md
docs-site/: astro.config.mjs  book.toml  package-lock.json  package.json  pnpm-lock.yaml
frontend/: .prettierrc  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
scripts/: coverage.sh
tests/: smoke-test.sh
(+485 files in other folders)
