[workspace]
resolver = "2"
members = [
    # ─── Foundation (ports + adapters) ───
    "crates/rusvel-core",
    "crates/rusvel-db",
    "crates/rusvel-llm",
    "crates/rusvel-agent",
    "crates/rusvel-event",
    "crates/rusvel-memory",
    "crates/rusvel-tool",
    "crates/rusvel-jobs",
    "crates/rusvel-auth",
    "crates/rusvel-config",

    # ─── Domain Engines ───
    "crates/forge-engine",
    "crates/code-engine",
    "crates/harvest-engine",
    "crates/content-engine",
    "crates/gtm-engine",

    # ─── Surfaces ───
    "crates/rusvel-api",
    "crates/rusvel-cli",
    "crates/rusvel-tui",
    "crates/rusvel-mcp",
    "crates/rusvel-app",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Mehdi Baneshi <mehdi@mbaneshi.click>"]
repository = "https://github.com/mbaneshi/all-in-one-rusvel"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Web
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# CLI
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# LLM
reqwest = { version = "0.12", features = ["json", "stream"] }

# MCP
rmcp = { version = "0.16", features = ["server", "transport-sse", "transport-io"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# ID generation
uuid = { version = "1", features = ["v7", "serde"] }

# Embed frontend
rust-embed = { version = "8", features = ["compression"] }

# Internal crates
rusvel-core = { path = "crates/rusvel-core" }
rusvel-db = { path = "crates/rusvel-db" }
rusvel-llm = { path = "crates/rusvel-llm" }
rusvel-agent = { path = "crates/rusvel-agent" }
rusvel-event = { path = "crates/rusvel-event" }
rusvel-memory = { path = "crates/rusvel-memory" }
rusvel-tool = { path = "crates/rusvel-tool" }
rusvel-jobs = { path = "crates/rusvel-jobs" }
rusvel-auth = { path = "crates/rusvel-auth" }
rusvel-config = { path = "crates/rusvel-config" }
forge-engine = { path = "crates/forge-engine" }
code-engine = { path = "crates/code-engine" }
harvest-engine = { path = "crates/harvest-engine" }
content-engine = { path = "crates/content-engine" }
gtm-engine = { path = "crates/gtm-engine" }
rusvel-api = { path = "crates/rusvel-api" }
rusvel-cli = { path = "crates/rusvel-cli" }
rusvel-mcp = { path = "crates/rusvel-mcp" }

[profile.release]
lto = true
strip = true
codegen-units = 1
