[package]
name = "code-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rusvel-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tree-sitter = "0.24"
tree-sitter-rust = "0.23"

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"

[lints]
workspace = true
