[package]
name = "content-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Content Engine — creation, adaptation, scheduling, and publishing"

[dependencies]
rusvel-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
wiremock = "0.6"

[lints]
workspace = true
