[package]
name = "dept-code"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Code Department — DepartmentApp wrapper for code-engine"

[dependencies]
rusvel-core = { workspace = true }
code-engine = { path = "../code-engine" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
