[package]
name = "dept-distro"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Distribution Department — DepartmentApp wrapper for distro-engine"

[dependencies]
rusvel-core = { workspace = true }
distro-engine = { path = "../distro-engine" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
