[package]
name = "dept-finance"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Finance Department — DepartmentApp wrapper for finance-engine"

[dependencies]
rusvel-core = { workspace = true }
finance-engine = { path = "../finance-engine" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
