[package]
name = "dept-flow"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Flow Department — DepartmentApp wrapper for flow-engine"

[dependencies]
rusvel-core = { workspace = true }
flow-engine = { path = "../flow-engine" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
