[package]
name = "dept-forge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Forge Department — DepartmentApp wrapper for forge-engine"

[dependencies]
rusvel-core = { workspace = true }
forge-engine = { path = "../forge-engine" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
