[package]
name = "dept-growth"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Growth Department — DepartmentApp wrapper for growth-engine"

[dependencies]
rusvel-core = { workspace = true }
growth-engine = { path = "../growth-engine" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
