[package]
name = "dept-harvest"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Harvest Department — DepartmentApp wrapper for harvest-engine"

[dependencies]
rusvel-core = { workspace = true }
harvest-engine = { path = "../harvest-engine" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
