[package]
name = "dept-legal"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Legal Department — DepartmentApp wrapper for legal-engine"

[dependencies]
rusvel-core = { workspace = true }
legal-engine = { path = "../legal-engine" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
