[package]
name = "dept-messaging"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Messaging department shell — wires ChannelPort adapters when present (Sprint 8)"

[dependencies]
rusvel-core = { workspace = true }
rusvel-channel = { path = "../rusvel-channel" }

[lints]
workspace = true
