[package]
name = "dept-support"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Support Department — DepartmentApp wrapper for support-engine"

[dependencies]
rusvel-core = { workspace = true }
support-engine = { path = "../support-engine" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
