[package]
name = "rusvel-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "AgentPort implementation: LLM + Tool + Memory agent loop (ADR-009)"

[dependencies]
rusvel-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "macros"] }

[lints]
workspace = true
