[package]
name = "rusvel-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rusvel-core = { workspace = true }
rusvel-llm = { workspace = true }
forge-engine = { workspace = true }
code-engine = { workspace = true }
content-engine = { workspace = true }
harvest-engine = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
tokio-stream = "0.1"
reqwest = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
axum-test = "16"
rusvel-core = { workspace = true }

[lints]
workspace = true
