[package]
name = "rusvel-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rusvel-core = { workspace = true }
rusvel-db = { workspace = true }
rusvel-event = { workspace = true }
rusvel-schema = { workspace = true }
rusvel-llm = { workspace = true }
rusvel-agent = { workspace = true }
forge-engine = { workspace = true }
code-engine = { workspace = true }
content-engine = { workspace = true }
harvest-engine = { workspace = true }
flow-engine = { workspace = true }
gtm-engine = { workspace = true }
rusvel-cdp = { workspace = true }
rusvel-webhook = { workspace = true }
rusvel-cron = { workspace = true }
rusvel-channel = { workspace = true }
axum = { workspace = true }
tower = { workspace = true, features = ["limit", "buffer"] }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
rusqlite = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
reqwest = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
async-trait = { workspace = true }
forge-engine = { workspace = true }
rusvel-agent = { workspace = true }
rusvel-config = { workspace = true }
rusvel-core = { workspace = true }
rusvel-db = { workspace = true }
rusvel-event = { workspace = true }
rusvel-memory = { workspace = true }
tower = { workspace = true, features = ["util"] }
uuid = { workspace = true }

[lints]
workspace = true
