[package]
name = "rusvel-builtin-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Built-in tools for RUSVEL agents: file ops, shell, web, git"

[dependencies]
rusvel-agent = { workspace = true }
rusvel-core = { workspace = true }
rusvel-tool = { workspace = true }
flow-engine = { workspace = true }
forge-engine = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
glob = "0.3"
reqwest = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
