[package]
name = "rusvel-cdp"
description = "Chrome DevTools Protocol WebSocket client (BrowserPort)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rusvel-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
base64 = "0.22"

[lints]
workspace = true
