[package]
name = "rusvel-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CLI surface for RUSVEL using Clap 4"

[dependencies]
rusvel-core = { workspace = true }
forge-engine = { workspace = true }
code-engine = { workspace = true }
content-engine = { workspace = true }
harvest-engine = { workspace = true }
rusvel-cdp = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reedline = { workspace = true }
crossterm = { workspace = true }

[lints]
workspace = true
